@@ -70,7 +70,7 @@ namespace StructureSynth {
 				virtual void setBackgroundColor(SyntopiaCore::Math::Vector3f rgb);
 				virtual void setAlpha(double alpha) { this->alpha = alpha; }
 
-				QString getOutput() { return output.join(""); }
+				QString getOutput() ;
 				
 				// Issues a command for a specific renderclass such as 'template' or 'opengl'
 				virtual void callCommand(const QString& renderClass, const QString& command);
