@@ -3,12 +3,11 @@ Bug List:
 Priority 0-5, 5 is worst:
 
 Fix mouse zoom
-- [3] Syntax highlightning has issues: missing keywords, fails after \t, (Notice: '\tTriangles' does not parse!), does not update properly after copy and paste.
-- [3] 'Template Render to File' saves files with \d\d\a carriage returns
-- [3] Parser do not allow operator names as rule names. 'rule R1 maxdepth 2 > c ' fails.
-- [3] No sorting while alpha-blending. All opaque objects should be drawn before transparent. Turn off Z-buffer while drawing.
-- [3] Face Culling does not work for boxes, when coordinates are flipped.
+
+- [2] No sorting while alpha-blending. All opaque objects should be drawn before transparent. Turn off Z-buffer while drawing.
+- [2] Face Culling does not work for boxes, when coordinates are flipped.
 - [2] A self-refering cycle of rule retirements would crash structure synth.
+- [2] Parser do not allow operator names as rule names. 'rule R1 maxdepth 2 > c ' fails.
 
 Other TO-DO's:
 
