@@ -1,6 +1,10 @@
 
 Changelog for Structure Synth:
 ------------------------------
+20 Jan 09 [MHC] Fixed CR+CR+LF export bug.
+[2]             Fixed infoText bg color.
+				Removed 'copied to clipboard' for file renders. 
+
 19 Jan 09 [MHC] More Cam Export stuff. Now works with more aspect ratios. Added the following exports to the 'begin' template:
 [1h]			{fov},{aspect},{width} {height} [Width and Height being the size of the OpenGL viewport, aspect their proprotion and for=29*aspect (pretty close for SunFlow export)]
 
